--- a/frontend/marketplace/.eslintrc
+++ b/frontend/marketplace/.eslintrc
@@ -1,3 +1,25 @@
 {
-  "extends": ["react-app", "plugin:prettier/recommended"]
+  "extends": ["airbnb", "plugin:prettier/recommended"],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 9,
+    "ecmaFeatures": {
+      "impliedStrict": true,
+      "jsx": true
+    }
+  },
+  "env": {
+    "node": true,
+    "es6": true
+  },
+  "plugins": ["react"],
+  "rules": {
+    "react/jsx-filename-extension": ["off"],
+    "react/prefer-stateless-function": ["off"],
+    "arrow-body-style": ["error", "always"],
+    "react/self-closing-comp": 0,
+    "react/prop-types": 0,
+    "react/jsx-first-prop-new-line": [0, "never"],
+    "react/jsx-one-expression-per-line": ["off"]
+  }
 }
