--- a/frontend/marketplace/package.json
+++ b/frontend/marketplace/package.json
@@ -7,6 +7,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "prettier": "^1.14.3",
     "react": "^16.6.0",
+    "react-animated-slider": "^1.1.4",
     "react-dom": "^16.6.0",
     "react-modal": "^3.6.1",
     "react-router-dom": "^4.3.1",
@@ -26,5 +27,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1"
+  }
 }
